# insights-client

./: .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmessage  .packit.yaml  .testing-farm.yaml  .travis.yml  EGG_VERSION  LICENSE  MANIFEST.in  MANIFEST.rhel6  MANIFEST.rhel7  Makefile  Makefile.am  README.md  TESTING.md  __main__.py  autogen.sh  bootstrap.sh  configure.ac  insights-client  insights-client.egg  insights-client.spec  insights-core.egg  lay-the-eggs.sh  major_version.py  meson.build  meson_options.txt  pyproject.toml  pytest.ini  requirements-dev.txt  rpm-release.md  setup.py
.cache/v/cache/: lastfailed
.copr/: Makefile  insights-client.spec  insights-client.spec.in
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codespell.yml  docstring_validation.yml  pytest.yml  stylish.yml  test_case_validation_and_upload.yml  testimony.yml
data/: .fallback.json  .fallback.json.asc  Makefile.am  file-content-redaction.yaml  file-redaction.yaml  insights-client.conf  insights-client.motd  insights-client.spec  meson.build  remove.conf  ros.conf  rpm.egg  rpm.egg.asc
data/cron/: Makefile.am  insights-client  insights-client.cron  meson.build
data/etc/: insights-client.conf  insights-client.motd
data/logrotate.d/: Makefile.am  insights-client  meson.build
data/systemd/: 80-insights.preset  Makefile.am  insights-checkin.service.in  insights-client-boot.service  insights-client-checkin.service.in  insights-client-results.path  insights-client-results.path.in  insights-client-results.service  insights-client-results.service.in  insights-client.service  insights-client.timer  insights-register.path.in  insights-register.service.in  insights-unregister.path  insights-unregister.path.in  insights-unregister.service.in  meson.build
data/systemd/systemd-autoregistration/: 80-insights-register.preset  insights-register.path  insights-register.service  insights-unregister.service
data/systemd/systemd-checkin/: insights-client-checkin.service  insights-client-checkin.timer
data/tmpfiles.d/: insights-client.conf  meson.build
docs/: Makefile.am  file-content-redaction.yaml.example  file-redaction.yaml.example  insights-client.8  insights-client.conf.5  meson.build
etc/: .exp.sed  .fallback.json  .fallback.json.asc  api.access.redhat.com.pem  insights-client.conf  insights-client.cron  insights-client.motd  insights-client.service  insights-client.spec  insights-client.timer  insights-compliance.cron  insights-compliance.service  insights-compliance.timer
etc/insights-client/: insights_action_plugin.py  insights_ansible_module.py
etc/insights-client/insights/action_plugins/: insights.py
etc/sysconfig/: insights-client
insights_client/: __init__.py  __main__.py  constants.py  major_version.py  run.py
insights_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
insights_client/tests/: test_insights_client_run.py  test_rpm.py  test_sed.py
insights_client/tests/helpers/: getent.py  test_getent.py
insights_core/: __init__.py  __main__.py  ansible_helper.py  constants.py  core.py  options.py  utilities.py
integration-tests/: README.md  conftest.py  constants.py  custom_betelgeuse_config.py  requirements.txt  selinux.py  test_checkin.py  test_client.py  test_client_options.py  test_client_systemd.py  test_collection.py  test_common_specs.py  test_compliance.py  test_connection.py  test_display_name_option.py  test_e2e.py  test_file_workflow.py  test_manpage.py  test_motd.py  test_obfuscation.py  test_pcp_zeroconf.py  test_redaction.py  test_registration.py  test_ros.py  test_selinux.py  test_status.py  test_tags.py  test_unregister.py  test_upload.py  test_version.py  testimony.yml
integration-tests/playbook_verifier/: test_verifier.py
integration-tests/playbook_verifier/playbooks/: README.md  bugs.yml  compliance_openscap_setup.yml
m4/: systemd.m4
scripts/: 01-upgrade-egg.sh  README.md  insights-client  integration-tests.py  tf_run.py
src/: Makefile.am  insights-client  insights-client.in  meson.build  redhat-access-insights  redhat-access-insights.in  setup.cfg
src/insights_client/: Makefile.am  __init__.py  constants.py.in  meson.build  metrics.py  run.py  utc.py
src/insights_client/tests/: Makefile.am  TESTING.md  conftest.py  meson.build  requirements-core.txt  requirements.txt  test_client.py  test_commands.py  test_metrics.py  test_motd.py  test_sed.py  test_sed.py.in
systemtest/: copr-setup.sh  guest-setup.sh  insights-core-setup.sh  install-test-deps.sh
systemtest/plans/: main.fmf  rhsm.fmf  satellite.fmf
systemtest/tests/integration/: main.fmf  test.sh
