[tool.black]
include = '(\.py(\.in)?|src/insights-client.in)$'

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insights-client"
version = "3.10.1"
description = "Uploads Insights information to Red Hat on a periodic basis"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPL-2.0-or-later" }

# Dependencies from the 'Requires:' tags in the .spec file
dependencies = [
    "requests>=2.6",
    "PyYAML",
    "six",
    "setuptools",
]

[project.scripts]
# This creates the /usr/bin/insights-client executable
insights-client = "insights_client:_main"

[tool.setuptools.packages.find]
# Locates the 'insights_client' package in the 'src/' directory
where = ["src"]
